add new feats logout and realms fetching

--- a/back/Authentication/src/main/resources/application.properties
+++ b/back/Authentication/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.h2.console.path=/h2-console
 # Keycloak Configuration
 keycloak.realm=master
 keycloak.client-id=admin-client
-keycloak.client-secret=wtVUT7npnKO0VhG0rE4ZhAbQgTIcqgFk
+keycloak.client-secret=2oU1dULi7bbe8fWcHZJWW4ITX1h9CoCg
 keycloak.auth-server-url=http://localhost:8080
 
 
@@ -27,3 +27,12 @@ keycloak.auth-server-url=http://localhost:8080
 keycloak.token-url=${keycloak.auth-server-url}/realms/${keycloak.realm}/protocol/openid-connect/token
 keycloak.logout-url=${keycloak.auth-server-url}/admin/realms/${keycloak.realm}/users/{userId}/logout
 keycloak.admin-base-url=${keycloak.auth-server-url}/admin/realms
+
+# cors configuration to allow GET POST PUT DELETE OPTIONS requests from the frontend
+# allow origin  on localhost 4200
+
+management.endpoints.web.cors.allowed-methods=GET,POST,OPTIONS
+management.endpoints.web.cors.allowed-headers=*
+management.endpoints.web.cors.allowed-origin-patterns=*
+management.endpoints.web.cors.allowed-origins=http://localhost:2400
+
