add rols manip ops

--- a/back/Authentication/src/main/resources/application.properties
+++ b/back/Authentication/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.h2.console.path=/h2-console
 # Keycloak Configuration
 keycloak.realm=master
 keycloak.client-id=admin-client
-keycloak.client-secret=2oU1dULi7bbe8fWcHZJWW4ITX1h9CoCg
+keycloak.client-secret=wtVUT7npnKO0VhG0rE4ZhAbQgTIcqgFk
 keycloak.auth-server-url=http://localhost:8080
 
 
@@ -34,5 +34,5 @@ keycloak.admin-base-url=${keycloak.auth-server-url}/admin/realms
 management.endpoints.web.cors.allowed-methods=GET,POST,OPTIONS
 management.endpoints.web.cors.allowed-headers=*
 management.endpoints.web.cors.allowed-origin-patterns=*
-management.endpoints.web.cors.allowed-origins=http://localhost:2400
-
+management.endpoints.web.cors.allowed-origins=http://localhost:4200
+server.max-http-request-header-size=65536
